--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "daily-task-organizer",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://umairBinMohammad.github.io/daily-task-organizer",
   "dependencies": {
     "cra-template": "1.2.0",
     "react": "^19.0.0",
@@ -11,6 +12,8 @@
     "zustand": "^5.0.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -36,6 +39,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17"
   }
